--- a/pathology_search/templates/pathology_search/validate.html
+++ b/pathology_search/templates/pathology_search/validate.html
@@ -7,6 +7,7 @@
     <title>Validation - {{ pathology_info.name|default:"Pathologie" }}</title>
     
     <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
