--- a/pathology_search/templates/pathology_search/index.html
+++ b/pathology_search/templates/pathology_search/index.html
@@ -241,7 +241,7 @@
             class="w-full gradient-bg text-white font-semibold py-3 sm:py-4 px-6 rounded-lg hover:opacity-90 transition duration-200 flex items-center justify-center text-base sm:text-lg touch-action-manipulation"
         >
             <i class="fas fa-search mr-2"></i>
-            Rechercher avec le modèle sélectionné
+            Rechercher 
         </button>
     </form>
 </div>
